# vellum-assistant

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .leo-test  .mcp.json  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  CALLING_FEATURE_IMPLEMENTATION_PLAN.md  CLAUDE.md  CODEBASE_REPORT.md  CONSTITUTION.md  CONTRIBUTING.md  CONVERSATION_PROCESS_ISOLATION_AUDIT.md  GLOSSARY.md  MIGRATION_SYNC_ASYNC_AUDIT.md  README.md  SECURITY.md  TEST_PLAN.md  docker-compose.yml  llms.txt  next.config.ts  package.json  plan.md  risk-classifier-phase2-followups.md  setup.sh  slack-setup-ui-plan.md  socket.yml  test-preload.ts  test.txt
.claude/: IDEAS.md  README.md  UNREVIEWED_PRS.md  check-pr-reviews  gh-project  gh-review  settings.json  ship  wait-ci  worktree
.githooks/: .githooks  README.md  bun-install-if-deps-changed.sh  install.sh  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.plans/: avatar-cli-subcommands.md  conv-defer.md  dyn-ctx-window.md  fix-macos-app-icon.md  host-browser-robustness.md  host-file-transfer.md  matrix-review-fixes.md  move-risk-pipeline-to-gateway.md  service-comm-clients.md  (+3 more)
clients/tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
clients/tauri/src-tauri/capabilities/: default.json
clients/tauri/src-tauri/icons/: .gitkeep  icon.icns
clients/tauri/src-tauri/src/: lib.rs  main.rs
scripts/diarization-poc/: README.md  capture_vad_chunks.py  identity_evidence_openai.py  learn_speakers.py  pyproject.toml  record_named_resolution_fixture.py  requirements.txt  run_pipeline.py  start_clean.py  transcribe_openai.py
vembda-assistant-server/: Dockerfile  pyproject.toml
vembda-assistant-server/deploy/: entrypoint  start
vembda-assistant-server/src/vembda_assistant_server/: app.py
vembda-assistant-server/tests/: test_healthz.py
(+19641 files in other folders)
