[package]
name = "eli-hud"
version = "0.1.0"
description = "Eli — Jarvis-style HUD for the Vellum assistant"
authors = ["Eli Project"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "eli_hud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-os = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
